Adding animation to the navbar

--- a/src/components/Certificates.astro
+++ b/src/components/Certificates.astro
@@ -6,7 +6,7 @@ const {currentLocale} = Astro
 const i18n = getI18N({currentLocale})
 ---
 
-<section class="mt-[6rem]">
+<section id="certificates" class="mt-[6rem]">
     <div class="container">
         <h2 class="text-[1.5rem] text-center mb-[1rem]">{i18n.CERTIFICATES_TITLE}</h2>
         <div class="flex flex-col md:flex-row gap-[1rem]">
