--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -5,7 +5,7 @@ import { getI18N } from '../i18n';
 const {currentLocale} = Astro
 const i18n = getI18N({currentLocale})
 ---
-<section class="mt-[6rem]">
+<section id="contact" class="mt-[6rem]">
     <div class="container">
         <h2 class="text-[1.5rem] text-center mb-[.5rem]">{i18n.CONTACT_TITLE}</h2>
         <div class="flex gap-[1rem] flex-col md:flex-row">
