--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -17,7 +17,7 @@ const getSubtitle = (subtitle:string)=>{
 ---
 
 
-<section class="mt-[6rem] text-[1.5rem]">
+<section id="skills" class="mt-[6rem] text-[1.5rem]">
     <div class="container">
         <h2 class="text-center">{i18n.SKILLS_TITLE}</h2>
         <div class="mt-[1rem]">
