--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,6 +31,7 @@ const { title } = Astro.props;
 		background: #000;
 		color: #fff;
 		background-size: 224px;		
+		scroll-behavior: smooth;
 		scrollbar-color: #fff5 #fff1;
 		scrollbar-width: thin;
 	}
