--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import { Icon } from "astro-icon/components";
 
 ---
 
-<footer class="bg-primary mt-[3rem] pt-[.5rem] pb-[1rem]">
+<footer class="bg-primary mt-[3rem] pt-[.5rem] pb-[4.5rem] lg:pb-[1rem]">
     <div class="container flex flex-col md:flex-row items-center justify-between">
         <h2 class="text-[1rem] text-[#000] text-center">Rey Halsall @reduhq • 2024</h2>
         <div class="flex gap-[1rem] justify-center my-[.5rem]">
