--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -19,10 +19,10 @@ const i18n = getI18N({currentLocale})
             <h1 class="text-[3rem] leading-[3.5rem] font-bold">{i18n.PRESENTATION_TITLE} Rey <span class="block relative text-primary after:w-[5rem] after:h-[1px] after:bg-primary after:absolute after:bottom-0 after:left-0">Halsall</span></h1>
             <p class="pt-[.5rem]" set:html={i18n.PRESENTATION_DESCRIPTION}></p>
             <div class="mt-[1rem]">
-                <button class="btn-cv bg-primary text-[#000] py-[.5rem] px-[1.5rem] rounded-[.5rem]">{i18n.PRESENTATION_BTN_CV}</button>
-                <button class="btn-contact border-primary border-[1px] py-[.5rem] px-[1.5rem] rounded-[.5rem] ml-[.5rem] text-primary">{i18n.PRESENTATION_BTN_CONTACT}</button>
+                <button class="btn-cv bg-primary text-[#000] rounded-[.5rem]"><a class="block h-full w-full py-[.5rem] px-[1.5rem]" target="_blank" href="/portfolio/reduhqCV.pdf">{i18n.PRESENTATION_BTN_CV}</a></button>
+                <button class="btn-contact border-primary border-[1px] py-[.5rem] px-[1.5rem] rounded-[.5rem] ml-[.5rem] text-primary"><a href="#contact">{i18n.CONTACT_TITLE}</a></button>
             </div>
-            <div class="flex gap-[.5rem] mt-[1rem]">
+            <div class="networks flex gap-[.5rem] mt-[1rem]">
                 <a class="border-[1px] border-primary rounded-full p-[.5rem] " target="_blank" href="https://github.com/reduhq"><Icon name="mdi:github" size={25}/></a>
                 <a class="border-[1px] border-primary rounded-full p-[.5rem] " target="_blank" href="https://www.linkedin.com/in/rey-halsall/"><Icon name="mdi:linkedin" size={25}/></a>
             </div>
@@ -108,11 +108,11 @@ const i18n = getI18N({currentLocale})
         width: 100%;
     }
 
-    a{
+    .networks a{
         transition: .3s;
     }
     
-    a:hover{
+    .networks a:hover{
         transform: scale(1.1);
         background: #14d4c9;
         box-shadow: 
