--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import '@fontsource-variable/inter';
+import {Toaster} from 'sonner'
 
 interface Props {
 	title: string;
@@ -19,6 +20,14 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
+		<Toaster client:load 
+			position='top-right',
+			theme='dark',
+			richColors={true},
+			expand={true},
+			closeButton={true},
+			offset={'1rem'}
+		/>
 		<slot />
 	</body>
 </html>
