--- a/src/components/App.astro
+++ b/src/components/App.astro
@@ -14,7 +14,7 @@ const {currentLocale} = Astro
 const i18n = getI18N({currentLocale})
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title={i18n.SEO_TITLE} description={i18n.SEO_DESCRIPTION}>
 	<main>
 		<Presentation/>
 		<Projects/>
