--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,24 +1,34 @@
 ---
 import '@fontsource-variable/inter';
 import {Toaster} from 'sonner'
+import SEO from '../components/SEO.astro';
 
-interface Props {
-	title: string;
+interface Props{
+    title:string
+    description:string
+    canonical?:string
+    image?:string
 }
+const {
+    title,
+    description,
+    canonical,
+    image
+} = Astro.props
 
 const {currentLocale} = Astro
-const { title } = Astro.props;
 ---
 
 <!doctype html>
 <html lang={currentLocale}>
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/portfolio/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<SEO
+			title={title}
+			description={description}
+			canonical={canonical}
+			image={image}
+			language={currentLocale}
+		/>
 	</head>
 	<body>
 		<Toaster client:load 
