Removing the Base in astro.config.mjs

--- a/src/components/Certificates.astro
+++ b/src/components/Certificates.astro
@@ -11,17 +11,17 @@ const i18n = getI18N({currentLocale})
         <h2 class="text-[1.5rem] text-center mb-[1rem]">{i18n.CERTIFICATES_TITLE}</h2>
         <div class="flex flex-col md:flex-row gap-[1rem]">
             <div class="flex-grow-[1] flex flex-col justify-center gap-[1rem]">
-                <article data-image="/portfolio/feria_ciencia_tecnologia.jpg" class="certificate-item p-[.5rem] border border-[#30363d] rounded-[.5rem]">
+                <article data-image="/feria_ciencia_tecnologia.jpg" class="certificate-item p-[.5rem] border border-[#30363d] rounded-[.5rem]">
                     <h3 class="uppercase font-bold mb-[.5rem] text-primary">{i18n.CERTIFICATES_1_TITLE}</h3>
                     <p class="text-[#fffb]">{i18n.CERTIFICATES_1_DESCRIPTION}</p>
                     <time class="text-[#fffb]" datetime="2022">2022</time>
                 </article>
-                <article data-image="/portfolio/hackathon_nicaragua.jpg" class="certificate-item p-[.5rem] border border-[#30363d] rounded-[.5rem]">
+                <article data-image="/hackathon_nicaragua.jpg" class="certificate-item p-[.5rem] border border-[#30363d] rounded-[.5rem]">
                     <h3 class="uppercase font-bold mb-[.5rem] text-primary">{i18n.CERTIFICATES_2_TITLE}</h3>
                     <p class="text-[#fffb]">Hackathon Nicaragua</p>
                     <time class="text-[#fffb]" datetime="2023">2023</time>
                 </article>
-                <article data-image="/portfolio/certificado_cs50.jpg" class="certificate-item is-active p-[.5rem] border border-[#30363d] rounded-[.5rem]">
+                <article data-image="/certificado_cs50.jpg" class="certificate-item is-active p-[.5rem] border border-[#30363d] rounded-[.5rem]">
                     <h3 class="uppercase font-bold mb-[.5rem] text-primary">{i18n.CERTIFICATES_3_TITLE}</h3>
                     <p class="text-[#fffb]">{i18n.CERTIFICATES_3_DESCRIPTION}</p>
                     <time class="text-[#fffb]" datetime="2024">2024</time>
@@ -31,12 +31,12 @@ const i18n = getI18N({currentLocale})
                 <div id="gallery" class="max-w-[25rem] m-auto">
                     <a 
                     class="certificate" 
-                    href="/portfolio/certificado_cs50.jpg"
+                    href="/certificado_cs50.jpg"
                     data-pswp-width="800" 
                     data-pswp-height="600" 
                     target="_blank"
                     >
-                        <img class="certificate-img" src="/portfolio/certificado_cs50.jpg" alt="Certificado CS50">
+                        <img class="certificate-img" src="/certificado_cs50.jpg" alt="Certificado CS50">
                     </a>
                 </div>
             </div>
