--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -16,7 +16,7 @@ const i18n = getI18N({currentLocale})
     <h2 class="mt-[6rem] mb-[1rem] text-[1.5rem] text-center">{i18n.PROJECTS_TITLE}</h2>
     <div class="grid grid-cols-[repeat(auto-fill,_minmax(23rem,_1fr))] gap-[1rem]">
         <ProjectCard
-            image="/portfolio/noxbrew-web.jpg"
+            image="/noxbrew-web.jpg"
             title="Noxbrew"
             description={i18n.PROJECTS_NOXBREW_DESCRIPTION}
             url='https://noxbrew.vercel.app/'
@@ -25,7 +25,7 @@ const i18n = getI18N({currentLocale})
             tags={[FRONTEND.NEXT, FRONTEND.REACT, BACKEND.EXPRESS, LANGUAGES.TYPESCRIPT, BACKEND.PRISMA, BACKEND.POSTGRE]}
         />
         <ProjectCard
-            image="/portfolio/book_store_api.png"
+            image="/book_store_api.png"
             title="BookStore API"
             description={i18n.PROJECTS_BOOKSTORE_DESCRIPTION}
             githubBackend='https://github.com/reduhq/BookStoreAPI'
