Changing the profile picture

--- a/src/components/SEO.astro
+++ b/src/components/SEO.astro
@@ -42,7 +42,7 @@ const alternativeURL = new URL(determineAlternativeURL(), Astro.site)
 <meta name="keywords" content="Rey, Halsall, reduhq, portafolio, portfolio, freelance, Nicaragua, Managua, software, developer, backend, frontend, fullstack, react, astro, nextjs, expressjs, fastapi, javascript, typescript, python, html, css, diseño, web, pagina">
 
 {image&&<meta property="og:image" content={new URL(image, Astro.site)} />}
-{!image&&<meta property="og:image" content={new URL(language==='en'?'reduhq-portfolio-img-en.png':'reduhq-portfolio-img.png', Astro.site)} />}
+{!image&&<meta property="og:image" content={new URL(language==='en'?'reduhq-portfolio-img-en-2.png':'reduhq-portfolio-img-2.png', Astro.site)} />}
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
 <meta property="og:url" content={Astro.url} />
