--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -12,7 +12,7 @@ const i18n = getI18N({currentLocale})
 	<Header />
     <div class="flex flex-col gap-[1rem] md:flex-row">
         <div class="grow-[1] p-[1rem]">
-            <img class="rounded-full w-[40rem] m-auto" src="/profile-picture.png" alt="Rey Eduardo Halsall Quintero">
+            <img class="rounded-full w-[40rem] m-auto" src="/reduhq-img.jpg" alt="Rey Eduardo Halsall Quintero">
         </div>
         <div class="grow-[2] w-[100%] flex flex-col justify-center">
             <h3 class="text-primary text-[1.5rem] font-bold">Software developer</h3>
